refactor: Last read page update endpoint
